# Solo-Git

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLEANUP_SUMMARY.md  CLI_DEMO.txt  CLI_INTEGRATION_SUMMARY.md  CLI_SETUP_COMPLETE.md  CLI_TESTING_REPORT.md  CLI_TUI_TESTING_REPORT.md  DEBUGGING_SUMMARY.md  FIX_EXPLANATION.md  GIT_ENGINE_100_PERCENT_COMPLETE.md  GUI_IMPLEMENTATION_ANALYSIS.md  HEAVEN_CLI_INTEGRATION_REPORT.md  HEAVEN_INTERFACE_90_PERCENT_COMPLETION_REPORT.md  HEAVEN_INTERFACE_97_PERCENT_COMPLETION_REPORT.md  HEAVEN_INTERFACE_AUDIT_SUMMARY.md  HEAVEN_INTERFACE_GAP_ANALYSIS.md  HEAVEN_INTERFACE_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_COMPLETION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  PHASE3_COVERAGE_BASELINE_REPORT.md  PHASE3_COVERAGE_IMPROVEMENT_REPORT.md  PHASE3_FINAL_COVERAGE_REPORT.md  PHASE_0_SUMMARY.txt  PHASE_0_VERIFICATION_REPORT.md  PHASE_1_100_PERCENT_COMPLETION_REPORT.md  PHASE_1_ENHANCEMENTS_SUMMARY.md  PHASE_1_VERIFICATION_REPORT.md  PHASE_2_COMPLETION_REPORT.md  PHASE_2_COVERAGE_IMPROVEMENT_REPORT.md  PHASE_2_ENHANCED_COVERAGE_REPORT.md  PHASE_2_SUMMARY.md  PHASE_3_ENHANCEMENT_REPORT.md  PHASE_3_FINAL_SUMMARY.md  PHASE_3_SUMMARY.md  PHASE_4_READINESS_REPORT.md  PROJECT_STRUCTURE.md  (+25 more)
docs/: API.md  BETA_LAUNCH_CHECKLIST.md  HEAVEN_INTERFACE.md  HEAVEN_INTERFACE_GUIDE.md  KEYBOARD_SHORTCUTS.md  PERFORMANCE.md  PHASE_0_COMPLETE.md  PHASE_4_COMPLETION_REPORT.md  SECURITY.md  SETUP.md  (+5 more)
heaven-gui/src-tauri/: Cargo.toml  tauri.conf.json
heaven-gui/src-tauri/icons/: icon.icns
heaven-gui/src-tauri/src/: commands.rs  main.rs
(+247 files in other folders)
